# agentic-sre

./: .gitignore  CHAT_API_GUIDE.md  CHAT_HANDLER_SUCCESS.md  DEPLOYMENT_GUIDE.md  DIRECTories_TO_COMMIT.md  DOCX_REVIEW_GUIDE.md  ELASTICSEARCH_MCP_IMPLEMENTATION_PLAN.md  GITHUB_ORG_SECRETS_SETUP.md  GIT_COMMIT_ANALYSIS.md  KB_IMPLEMENTATION_PLAN.md  MCP_SERVER_ANALYSIS.md  OBSERVABILITY_GUIDE.md  POSTMAN_TESTING_GUIDE.md  TARS.md  WEBHOOK_SETUP.md  WORKING_QUERIES.md  YOUR_ACTUAL_SERVICES.md  delete-all-log-groups.sh  deploy-infrastructure.sh  deploy-lambda.sh  deploy-mcp.sh  deploy.sh  log-analyzer-chat.postman_collection.json  log-analyzer-poc.postman_collection.json  package.json  required-permissions.json  tars-flow-slide copy.html  tars-flow-slide-purple.html  tars-flow-slide.html  tars-proposal-slides.html  test-log-groups-api.sh  test-mcp-server.py  validate-logs-output.txt
agent-core/: README.md  requirements.txt
infrastructure/: README.md  dynamodb.tf  dynamodb_kb.tf  ecr.tf  ecs.tf  ecs_elasticsearch.tf  ecs_elasticsearch_mcp.tf  ecs_incident_mcp.tf  eventbridge.tf  github_actions_iam.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  s3_cloudfront.tf  s3_kb.tf  setup-github-actions-role.sh  ssm.tf  terraform.tfvars.example  tfplan  (+2 more)
mcp-incident-tools/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp-incident-tools/src/incident_mcp_server/: server.py
mcp-incident-tools/src/incident_mcp_server/mock_data/: jira_issues.json  servicenow_tickets.json
mcp-incident-tools/src/incident_mcp_server/tools/: __init__.py  jira_tools.py  servicenow_tools.py
(+179 files in other folders)
