[project]
name = "incident-mcp-tools"
version = "0.1.0"
description = "MCP server for incident tools (mock ServiceNow, Jira, knowledge base)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
incident-mcp-server = "incident_mcp_server.server:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
]
